started the script with index and styles

--- a/ver-js/index.html
+++ b/ver-js/index.html
@@ -3,6 +3,15 @@
 	<head>
 		<meta charset='utf-8'/>
 		<title>Vanilla JavaScript Dictionary</title>
+		<meta name='description' name='Index for the interactive dictionary in vanilla JavaScript'/>
+		<!--
+		  - ./ver-js/index.html
+		  - for: <https://github.com/lduran2/js-jquery-dictionary>
+		  - date: 2018-11-04 T12:24
+		  - by: Leomar Durán <https://github.com/lduran2>
+		  -->
+		<link rel='stylesheet' href='../style/dictionary.css'/>
+		<script src='display-definitions.js'></script>
 	</head>
 	<body>
 		<h1>Vanilla JavaScript Dictionary</h1>
